fixed style on mobile

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -63,16 +63,7 @@
   }
 }
 
-.link-form-container {
-  position: relative;
-}
 
-.btn-reset-links {
-  position: absolute;
-  left: 130px;
-  margin-bottom: 0;
-  bottom: 0px;
-}
 
 
 // .visible-confirmation {
@@ -109,6 +100,19 @@
   }
 }
 
+@media(min-width: 415px){
+  .link-form-container {
+    position: relative;
+  }
+  
+  .btn-reset-links {
+    position: absolute;
+    left: 130px;
+    margin-bottom: 0;
+    bottom: 0px;
+  }
+}
+
 @media(max-width: 992px) {
   .profile-review-grid {
     -ms-grid-columns: 1fr 1fr;
@@ -127,6 +131,18 @@
   .profile-review-grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+  }
+
+  .btn-reset-links {
+    margin-top: 10px;
+  }
+
+  .link-form-container {
+    margin-bottom: 20px;
+  }
+
+  .margin-top {
+    margin-top: 10px;
   }
 }
 
